--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a href="https://drive.google.com/file/d/1BLqHGPaD4oZnilcb75dizqI7Zb70WsZS/view?usp=sharing" target="_blank"
+        <a href="https://drive.google.com/file/d/1K4vEzmeYLueZZlDRito4bMen8l-S097A/view?usp=share_link" target="_blank"
           class="btn btn--bg" target="_blank">Resume</a>
         <!-- <a href="./#projects" class="btn btn--bg">Projects</a> -->
       </div>
