made all necessary changes

--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
           <li class="header__link-wrapper">
             <a href="./index.html" class="header__link"> Home </a>
           </li>
+
           <li class="header__link-wrapper">
             <a href="./index.html#about" class="header__link">About </a>
           </li>
+
+          <li class="header__link-wrapper">
+            <a href="./index.html#skills" class="header__link"> Skills </a>
+          </li>
+
           <li class="header__link-wrapper">
             <a href="./index.html#projects" class="header__link">
               Projects
@@ -62,6 +68,10 @@
             <a href="./index.html#about"> About </a>
           </li>
 
+          <!-- <li class="header__sm-menu-link">
+            <a href="./index.html.skills"> Skills </a>
+          </li> -->
+
           <li class="header__sm-menu-link">
             <a href="./index.html#projects"> Projects </a>
           </li>
@@ -84,8 +94,10 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a href="https://drive.google.com/file/d/1K4vEzmeYLueZZlDRito4bMen8l-S097A/view?usp=share_link" target="_blank"
-          class="btn btn--bg" target="_blank">Resume</a>
+        <!-- <a href="/Resume/tanisha-gupta-resume.pdf" download="tanisha-gupta-resume" target="_blank">Resume</a> -->
+
+        <a href="https://drive.google.com/file/d/1fszhTlcH2o-TXFqbnfAJ4JdzYP8QI6iU/view?usp=share_link" target="_blank"
+          class="btn btn--bg" download="tanisha-gupta-resume">Resume</a>
         <!-- <a href="./#projects" class="btn btn--bg">Projects</a> -->
       </div>
     </div>
@@ -148,21 +160,51 @@
               class="btn btn--med btn--theme dynamicBgClr">Find Resume</a> -->
           </div>
         </div>
-        <div class="about__content-skills">
-          <h3 class="about__content-title">My Skills</h3>
-          <div class="skills">
-            <div class="skills__skill">HTML</div>
-            <div class="skills__skill">CSS</div>
-            <!-- <div class="skills__skill">Tailwind</div> -->
-            <div class="skills__skill">JavaScript</div>
-            <div class="skills__skill">Node js</div>
-            <div class="skills__skill">Express</div>
-            <div class="skills__skill">Mongo DB</div>
-            <div class="skills__skill">React</div>
-            <div class="skills__skill">Redux</div>
-            <div class="skills__skill">GitHub</div>
-          </div>
+
+      </div>
+    </div>
+  </section>
+  <section id="skills" class="main-container">
+    <div class="about__content-skills">
+      <h3 class="about__content-title">My Skills</h3>
+      <div class="skills">
+        <div class="skills__skill">
+          <img src="/Images/html.svg" alt="">
         </div>
+        <div class="skills__skill">
+          <img src="/Images/css.svg" alt="">
+        </div>
+        <!-- <div class="skills__skill">
+          <img src="/Images/html.svg" alt="">
+          Tailwind</div> -->
+        <div class="skills__skill">
+          <img src="/Images/javascript.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/nodejs.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/expressjs.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/mongoDB.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/react.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/redux.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/typescript.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/materialui.svg" alt="">
+        </div>
+        <div class="skills__skill">
+          <img src="/Images/git.svg" alt="">
+        </div>
+
       </div>
     </div>
   </section>
@@ -177,8 +219,8 @@
       <div class="projects__content">
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img class="bigbasket" src="./assets/jpeg/Apollo.png" alt="Apollo247 Screenshot"
-              class="projects__row-img" loading="lazy" />
+            <img class="bigbasket" src="./assets/jpeg/Apollo.png" alt="Apollo247 Screenshot" class="projects__row-img"
+              loading="lazy" />
           </div>
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Apollo 24/7 Clone</h3>
@@ -204,8 +246,8 @@
         <!-- 2ND PROJECT STARTS -->
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img class="fragrance" src="./assets/jpeg/Levi.png" alt="Levi Store Screenshot"
-              class="projects__row-img" loading="lazy" />
+            <img class="fragrance" src="./assets/jpeg/Levi.png" alt="Levi Store Screenshot" class="projects__row-img"
+              loading="lazy" />
           </div>
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Levi Clone</h3>
