--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
           <h3 class="about__content-title">Get to know me!</h3>
           <div class="about__content-details">
             <p class="about__content-details-para">
-              I'm a technical enthusiast person with great interpersonal skills. Feel free to
-              <strong>contact</strong> me here.
+              I'm a technical enthusiast person with great interpersonal skills. Feel free to <strong>contact</strong>
+              me here.
             </p>
           </div>
           <div class="about_contact_resume">
@@ -331,14 +331,33 @@
   <!-- GITHUB STATISTICS -->
 
   <section>
-    <div id="githubStats" class="main-container" style=" font-size: large;">
+    <div id="githubCalender" class="main-container" style=" font-size: large;">
 
       <!-- Prepare a container for your calendar. -->
       <div class="calendar">
         <!-- Loading stuff -->
         Loading the data just for you.
       </div>
+    </div>
+  </section>
 
+  <section>
+    <div id='githubStats' class="main-container">
+      <picture>
+        <source srcset="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true&theme=dark"
+          media="(prefers-color-scheme: dark)" />
+        <source srcset="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true"
+          media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)" />
+        <img src="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true" />
+      </picture>
+      <picture>
+        <source
+          srcset="https://github-readme-stats.vercel.app/api/top-langs/?username=tanishaa17&layout=compact&show_icons=true&theme=dark"
+          media="(prefers-color-scheme: dark)" />
+        <source srcset="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true"
+          media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)" />
+        <img src="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true" />
+      </picture>
     </div>
   </section>
 
