--- a/index.html
+++ b/index.html
@@ -123,12 +123,6 @@
           <img src="./assets/png/twitter-ico.png" alt="icon" class="home-hero__social-icon" />
         </a>
       </div>
-      <div class="home-hero__social">
-        <a href="https://www.instagram.com/_imtanii_/" target="_blank"
-          class="home-hero__social-icon-link home-hero__social-icon-link--bd-none">
-          <img src="./assets/png/insta-ico.png" alt="icon" class="home-hero__social-icon" />
-        </a>
-      </div>
     </div>
     <div class="home-hero__mouse-scroll-cont">
       <div class="mouse"></div>
@@ -142,7 +136,7 @@
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main">About Me</span>
         <div class="heading_about_imagediv">
-          <img style="border-radius: 50%;" class="pic" src="./assets/png/portfolioPP.jpg" alt="">
+          <img style="border-radius: 50%;" class="pic" src="./assets/png/Professional Picture with white BG.jpg" alt="">
           <span style="line-height: 40px;" class="heading-sec__sub">
             Hey! everyone, I am <strong>Tanisha Gupta</strong> from Lucknow, UP. I have completed my Bachelors of
             commerce from <strong> University of Lucknow</strong> in 2019 and <strong>MERN Stack Web
@@ -416,9 +410,6 @@
             </a>
             <a target="_blank" rel="noreferrer" href="https://twitter.com/tanisha99241556">
               <img class="main-footer__icon" src="./assets/png/twitter-ico.png" alt="icon" />
-              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/_imtanii_/">
-                <img class="main-footer__icon main-footer__icon--mr-none" src="./assets/png/insta-ico.png" alt="icon" />
-              </a>
           </div>
         </div>
         <div class="main-footer__row main-footer__row-2">
