picture path changed

--- a/index.html
+++ b/index.html
@@ -179,40 +179,40 @@
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
         <div class="skills__skill">
-          <img src="/Images/html.svg" alt="">
+          <img src="/assets/svg/html.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/css.svg" alt="">
+          <img src="/assets/svg/css.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/javascript.svg" alt="">
+          <img src="/assets/svg/javascript.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/nodejs.svg" alt="">
+          <img src="/assets/svg/nodejs.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/expressjs.svg" alt="">
+          <img src="/assets/svg/expressjs.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/mongoDB.svg" alt="">
+          <img src="/assets/svg/mongoDB.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/react.svg" alt="">
+          <img src="/assets/svg/react.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/redux.svg" alt="">
+          <img src="/assets/svg/redux.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/typescript.svg" alt="">
+          <img src="/assets/svg/typescript.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/materialui.svg" alt="">
+          <img src="/assets/svg/materialui.svg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/chakraui.jpg" alt="">
+          <img src="/assets/svg/chakraui.jpg" alt="">
         </div>
         <div class="skills__skill">
-          <img src="/Images/git.svg" alt="">
+          <img src="/assets/svg/git.svg" alt="">
         </div>
 
       </div>
