--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a class="btn btn--bg" href="/Resume/tanisha-gupta-resume.pdf" download onclick="downloadResume()">Resume</a>
+        <a class="btn btn--bg" download href="/Resume/tanisha-gupta-resume.pdf" download onclick="downloadResume()">Resume</a>
       </div>
     </div>
 
