fixing bugs in pictures

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
         <div class="skills__skill">
-          <img src="/assets/svg/html.svg" alt="">
+          <img src="/Images/html.png" alt="">
         </div>
         <div class="skills__skill">
           <img src="/assets/svg/css.svg" alt="">
