resume added in navbar

--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
           <li class="header__link-wrapper">
             <a href="./index.html#projects" class="header__link">
               Projects
-
             </a>
           </li>
+
           <li class="header__link-wrapper">
             <a href="./index.html#contact" class="header__link"> Contact </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a class="header__link" href="/Resume/tanisha-gupta-resume.pdf" download
+              onclick="downloadResume()">Resume</a>
           </li>
         </ul>
         <div class="header__main-ham-menu-cont">
@@ -85,6 +89,7 @@
           <li class="header__sm-menu-link">
             <a href="./index.html#contact"> Contact </a>
           </li>
+
         </ul>
       </div>
     </div>
