--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a class="btn btn--bg" href="/Resume/tanisha-gupta-resume.pdf" download onclick="downloadResume()">Resume</a>
+        <a class="btn btn--bg" href="/Resume/Tanisha-Gupta-Resume.pdf" download onclick="downloadResume()">Resume</a>
       </div>
     </div>
+    
 
     <div class="home-hero__socials">
       <div class="home-hero__social">
@@ -184,7 +185,7 @@
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
         <div class="skills__skill">
-          <img src="/Images/html.png" alt="">
+          <img src="/assets/svg/html.svg" alt="">
         </div>
         <div class="skills__skill">
           <img src="/assets/svg/css.svg" alt="">
