resume error fixed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a class="btn btn--bg" href="/Resume/Tanisha-Gupta-Resume.pdf" download onclick="downloadResume()">Resume</a>
+        <a class="btn btn--bg" href="https://drive.google.com/u/0/uc?id=1LoW5Lkp7DqI4tL2GqS2lDx_7MF3OkTw8&export=download" download onclick="downloadResume()">Resume</a>
       </div>
     </div>
     
