--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
         </p>
       </div>
       <div class="home-hero__cta">
-        <a class="btn btn--bg" href="https://drive.google.com/u/0/uc?id=1LoW5Lkp7DqI4tL2GqS2lDx_7MF3OkTw8&export=download" download onclick="downloadResume()">Resume</a>
+        <a class="btn btn--bg"
+          href="https://drive.google.com/u/0/uc?id=1LoW5Lkp7DqI4tL2GqS2lDx_7MF3OkTw8&export=download" download
+          onclick="downloadResume()">Resume</a>
       </div>
     </div>
-    
+
 
     <div class="home-hero__socials">
       <div class="home-hero__social">
@@ -185,7 +187,7 @@
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
         <div class="skills__skill">
-          <img src="/assets/svg/html.svg" alt="">
+          <img src="/Images/html.png" alt="">
         </div>
         <div class="skills__skill">
           <img src="/assets/svg/css.svg" alt="">
