--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Tanisha | Portfolio</title>
   <link rel="shortcut icon" href="./assets/png/newT.png" type="image/x-icon">
   <meta name="description" content="Portfolio Template for Developer" />
-
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- GITHUB STYLESHEET -->
@@ -187,7 +189,7 @@
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
         <div class="skills__skill">
-          <img src="/Images/html.png" alt="">
+          <i class="fa-brands fa-html5 fa-beat" style="color: #f53100;"></i>
         </div>
         <div class="skills__skill">
           <img src="/assets/svg/css.svg" alt="">
