--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <a href="./index.html#contact" class="header__link"> Contact </a>
           </li>
           <li class="header__link-wrapper">
-            <a class="header__link" href="/Resume/tanisha-gupta-resume.pdf" download
+            <a class="header__link"
+              href="https://drive.google.com/u/0/uc?id=1LoW5Lkp7DqI4tL2GqS2lDx_7MF3OkTw8&export=download" download
               onclick="downloadResume()">Resume</a>
           </li>
         </ul>
