--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <title>Tanisha | Portfolio</title>
   <link rel="shortcut icon" href="./assets/png/newT.png" type="image/x-icon">
   <meta name="description" content="Portfolio Template for Developer" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
   <link rel="stylesheet" href="css/style.css" />
-
-  <!-- GITHUB STYLESHEET -->
-  <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
-
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
     rel="stylesheet" />
+  <!-- GITHUB STYLESHEET -->
+  <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
+
+  <!-- SKILLS ICON STYLESHEET -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
 </head>
 
 <body>
@@ -193,7 +193,7 @@
           <i class="fa-brands fa-html5 fa-beat-fade fa-2xl" style="color: #f53100;"></i>
         </div>
         <div class="skills__skill">
-          <i class="fa-brands fa-css3 fa-beat-fade fa-2xl" style="color: #1c67e9;"></i>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
         </div>
         <div class="skills__skill">
           <i class="fa-brands fa-square-js fa-beat-fade fa-2xl" style="color: #ffd500;"></i>
