--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
         <div class="skills__skill">
-          <i class="fa-brands fa-html5 fa-beat-fade fa-2xl" style="color: #f53100;"></i>
+          <i class="devicon-html5-plain-wordmark colored"></i>
         </div>
         <div class="skills__skill">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
