--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <!-- SKILLS SECTION -->
 
-  <section id="skills" class="main-container">
+  <section class="main-container">
     <div class="about__content-skills">
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
@@ -220,6 +220,19 @@
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/materialui/materialui-original.svg" />
         </div>
         <div class="skills__skill">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- TOOLS SECTION -->
+
+  <section class="main-container">
+    <div class="about__content-skills">
+      <h3 class="about__content-title">Platforms and Tools</h3>
+      <div class="skills">
+        <div class="skills__skill">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
         </div>
         <div class="skills__skill">
@@ -232,6 +245,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- PROJECT SECTION -->
 
