added resume in hamburger

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
             <a href="./index.html#contact"> Contact </a>
           </li>
 
+          <li class="header__sm-menu-link">
+            <a class="header__link"
+              href="https://drive.google.com/u/0/uc?id=1LoW5Lkp7DqI4tL2GqS2lDx_7MF3OkTw8&export=download" download
+              onclick="downloadResume()">Resume</a>
+          </li>
+
         </ul>
       </div>
     </div>
