--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <!-- SKILLS SECTION -->
 
-  <section class="main-container">
+  <section id="skills" class="main-container">
     <div class="about__content-skills">
       <h3 class="about__content-title">My Skills</h3>
       <div class="skills">
