--- a/index.html
+++ b/index.html
@@ -228,10 +228,15 @@
         <div class="skills__skill">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" />
         </div>
+        <div class="skills__skill">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/babel/babel-original.svg" />
+        </div>
       </div>
     </div>
   </section>
-
+  <!-- 
+           
+           -->
   <!-- TOOLS SECTION -->
 
   <section class="main-container">
