Added more skills

--- a/index.html
+++ b/index.html
@@ -231,10 +231,13 @@
         <div class="skills__skill">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/babel/babel-original.svg" />
         </div>
+        <div class="skills__skill">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" />
+        </div>
       </div>
     </div>
   </section>
-  
+
   <!-- TOOLS SECTION -->
 
   <section class="main-container">
