--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             commerce from <strong> University of Lucknow</strong> in 2019 and <strong>MERN Stack Web
               Development</strong> course from <strong> Masai School</strong> in July 2022. Since then I've been working
             as an <strong>Instructional Associate</strong> at <strong> Masai School </strong>. I am skilled in
-            <pre><strong>HTML,  CSS,  JavaScript,  Node js,  ExpressJs,  MongoDB,  React,  Redux.</strong> </pre> and
+            <p><strong>HTML, CSS, JavaScript, Node js, ExpressJs, MongoDB, React, Redux.</strong> </p> and
             passionate about learning new skills and utilize them in different projects. Along with that
             I am adaptable and a good communicator with great leadership qualities.
             <p>
