--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Tanisha | Portfolio</title>
   <link rel="shortcut icon" href="./assets/png/newT.png" type="image/x-icon">
   <meta name="description" content="Portfolio Template for Developer" />
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -153,7 +152,7 @@
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main">About Me</span>
         <div class="heading_about_imagediv">
-          <img style="border-radius: 50%;" class="pic" src="./assets/png/Professional Picture with white BG.jpg" alt="">
+          <img style="border-radius: 50%; height: 96%; margin: auto;" class="pic" src="./assets/png/Professional Picture with white BG.jpg" alt="">
           <span style="line-height: 40px;" class="heading-sec__sub">
             Hey! everyone, I am <strong>Tanisha Gupta</strong> from Lucknow, UP. I have completed my Bachelors of
             commerce from <strong> University of Lucknow</strong> in 2019 and <strong>MERN Stack Web
