added more github stats

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main">About Me</span>
         <div class="heading_about_imagediv">
-          <img style="border-radius: 50%; height: 96%; margin: auto;" class="pic" src="./assets/png/Professional Picture with white BG.jpg" alt="">
+          <img style="border-radius: 50%; height: 96%; margin: auto;" class="pic"
+            src="./assets/png/Professional Picture with white BG.jpg" alt="">
           <span style="line-height: 40px;" class="heading-sec__sub">
             Hey! everyone, I am <strong>Tanisha Gupta</strong> from Lucknow, UP. I have completed my Bachelors of
             commerce from <strong> University of Lucknow</strong> in 2019 and <strong>MERN Stack Web
@@ -376,6 +377,9 @@
 
   <section>
     <div id='githubStats' class="main-container">
+      <p><img src="https://github-readme-streak-stats.herokuapp.com/?user=tanishaa17&show_icons=true&theme=dark"
+          alt="tanishaa17" /></p>
+      <br>
       <picture>
         <source srcset="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true&theme=dark"
           media="(prefers-color-scheme: dark)" />
@@ -383,6 +387,8 @@
           media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)" />
         <img src="https://github-readme-stats.vercel.app/api?username=tanishaa17&show_icons=true" />
       </picture>
+    </div>
+    <div id='languageUsedDiv' class="main-container">
       <picture>
         <source
           srcset="https://github-readme-stats.vercel.app/api/top-langs/?username=tanishaa17&layout=compact&show_icons=true&theme=dark"
@@ -393,6 +399,7 @@
       </picture>
     </div>
   </section>
+
 
   <!-- CONTACT SECTION -->
 
