--- a/index.html
+++ b/index.html
@@ -358,35 +358,67 @@
 
         <!-- 3RD PROJECT ENDS -->
 
-          <!-- 4TH PROJECT STARTS -->
+        <!-- 4TH PROJECT STARTS -->
 
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img class="bigbasket" src="./assets/jpeg/Umbrella.png" alt="Customized Umbrella cover page"
-                class="projects__row-img" loading="lazy" />
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img class="bigbasket" src="./assets/jpeg/Umbrella.png" alt="Customized Umbrella cover page"
+              class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Custom Umbrella</h3>
+            <p class="projects__row-content-desc">
+              An umbrella which you can customize with your own logo.
+            </p>
+            <div class="projects__row_content_textTech">
+              <p>Tech Stacks : </p>
+              <div class="skills__skill">HTML</div>
+              <div class="skills__skill">CSS</div>
+              <div class="skills__skill">JavaScript</div>
+
             </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Custom Umbrella</h3>
-              <p class="projects__row-content-desc">
-                An umbrella which you can customize with your own logo.
-              </p>
-              <div class="projects__row_content_textTech">
-                <p>Tech Stacks : </p>
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-  
-              </div>
-              <div class="projects_link_deploye">
-                <a href="https://costomized-umbrella.vercel.app/" class="btn btn--med btn--theme dynamicBgClr"
-                  target="_blank">Live Link</a>
-                <a href="https://github.com/tanishaa17/custom-umbrella" class="btn btn--med btn--theme dynamicBgClr"
-                  target="_blank">Github Link</a>
-              </div>
+            <div class="projects_link_deploye">
+              <a href="https://costomized-umbrella.vercel.app/" class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank">Live Link</a>
+              <a href="https://github.com/tanishaa17/custom-umbrella" class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank">Github Link</a>
             </div>
           </div>
-  
-          <!-- 4TH PROJECT ENDS -->
+        </div>
+
+        <!-- 4TH PROJECT ENDS -->
+
+
+        <!-- 5TH PROJECT STARTS -->
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img class="bigbasket" src="./assets/jpeg/Bubbles.png" alt="Bubble App cover page" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Bubble App</h3>
+            <p class="projects__row-content-desc">
+              A small canvas-based application, where you can hit an arrow to strike a bubble, resulting in an immediate
+              change of it's color to gray.
+            </p>
+            <div class="projects__row_content_textTech">
+              <p>Tech Stacks : </p>
+              <div class="skills__skill">HTML</div>
+              <div class="skills__skill">CSS</div>
+              <div class="skills__skill">JavaScript</div>
+
+            </div>
+            <div class="projects_link_deploye">
+              <a href="https://bubbles-app-tau.vercel.app/" class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank">Live Link</a>
+              <a href="https://github.com/tanishaa17/BubbleApp" class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank">Github Link</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- 5TH PROJECT ENDS -->
       </div>
     </div>
     </div>
