added another project

--- a/index.html
+++ b/index.html
@@ -362,6 +362,37 @@
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
+            <img class="bigbasket" src="./assets/jpeg/Carousel.png" alt="Carousel App cover page"
+              class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Carousel App</h3>
+            <p class="projects__row-content-desc">
+              Aa small carousel featuring image details, where the active image is highlighted while the others
+              gracefully fade into a stylish gray shade.
+            </p>
+            <div class="projects__row_content_textTech">
+              <p>Tech Stacks : </p>
+              <div class="skills__skill">TypeScript</div>
+              <div class="skills__skill">ReactJS</div>
+              <div class="skills__skill">MaterialUI</div>
+
+            </div>
+            <div class="projects_link_deploye">
+              <a href="https://fotoley-carousel-app.vercel.app/" class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank">Live Link</a>
+              <a href="https://github.com/tanishaa17/fotoley-assignment" class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank">Github Link</a>
+            </div>
+          </div>
+        </div>
+        <!-- 4TH PROJECT ENDS -->
+
+
+        <!-- 5TH PROJECT STARTS -->
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
             <img class="bigbasket" src="./assets/jpeg/Umbrella.png" alt="Customized Umbrella cover page"
               class="projects__row-img" loading="lazy" />
           </div>
@@ -386,10 +417,10 @@
           </div>
         </div>
 
-        <!-- 4TH PROJECT ENDS -->
+        <!-- 5TH PROJECT ENDS -->
 
 
-        <!-- 5TH PROJECT STARTS -->
+        <!-- 6TH PROJECT STARTS -->
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
@@ -418,7 +449,7 @@
           </div>
         </div>
 
-        <!-- 5TH PROJECT ENDS -->
+        <!-- 6TH PROJECT ENDS -->
       </div>
     </div>
     </div>
